# back-tester-2026

./: .gitignore  Dockerfile.debug
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/models/: MarketDataEvent.h
src/utils/: MarketDataProcessor.cpp  MarketDataProcessor.h  MarketDataReader.cpp  MarketDataReader.h
